syntax = "proto3";

package user_service;

option go_package = "github.com/example/user-service/pkg/pb/user_service";

import "api/user_service/model.proto";
import "api/user_service/enum.proto";

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string name = 3;
  optional UserStatus status = 4;
}

message UpdateUserResponse {
  User user = 1;
}